--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@nuxt/typescript-runtime": "^2.0.1",
+    "@nuxtjs/axios": "^5.12.5",
+    "@nuxtjs/firebase": "^7.4.1",
     "core-js": "^3.8.2",
+    "firebase": "^8.2.4",
     "nuxt": "^2.14.12"
   },
   "devDependencies": {
