--- a/.gitignore
+++ b/.gitignore
@@ -66,7 +66,7 @@ typings/
 .next
 
 # nuxt.js build output
-.nuxt
+.nuxt/
 
 # Nuxt generate
 dist
@@ -88,3 +88,7 @@ sw.*
 
 # Vim swap files
 *.swp
+
+dist/
+
+public/
